2010-02-02  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Fisher.

        [Chromium] Should not select a word on right-click.
        https://bugs.webkit.org/show_bug.cgi?id=33364

        For non-Mac platforms, do not select a word around the caret when
        a context menu is opening. This behavior is not common in non-Mac
        platforms, and it prevents pasting with a context menu.

        In order that the spell checker works without the selection, we
        introduce WebFrame::selectWordAroundCaret(). We can replace a word
        around the caret with selectWordAroundCaret() + replaceSelection().

        * public/WebFrame.h: Add pure selectWordAroundCaret() declaration.
        * src/ContextMenuClientImpl.cpp:
        (WebKit::selectMisspelledWord): Move word-selection code to
        WebFrameImpl::selectWordAroundPosition(), and clear the selection
        on non-Mac.
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::selectWordAroundPosition):
        (WebKit::WebFrameImpl::selectWordAroundCaret):
        * src/WebFrameImpl.h: Add selectWordAroundCaret() declaration.

Canonical link: https://commits.webkit.org/45556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54212 268f45cc-cd09-0410-ab3c-d52691b4dbfc