WebKit/chromium/src/WebFrameImpl.h
@@ -141,6 +141,7 @@ public:
     virtual WebRange selectionRange() const;
     virtual WebString selectionAsText() const;
     virtual WebString selectionAsMarkup() const;
+    virtual bool selectWordAroundCaret();
     virtual int printBegin(const WebSize& pageSize);
     virtual float printPage(int pageToPrint, WebCanvas*);
     virtual float getPrintPageShrink(int page);
@@ -218,6 +219,8 @@ public:
 
     WebFrameClient* client() const { return m_client; }
     void dropClient() { m_client = 0; }
+
+    static void selectWordAroundPosition(WebCore::Frame*, WebCore::VisiblePosition);
 
 private:
     class DeferredScopeStringMatches;
